--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,7 @@ jobs:
         go-version: 1.17
 
     - name: Build
-      run: go build -v ./sock.go -o ./sock.exe
+      run: go build -v -o ./sock.exe ./sock.go
 
     - name: Test
       run: go test -v ./sock.go
