--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -37,11 +37,11 @@ jobs:
       uses: softprops/action-gh-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    
+      if: startsWith(github.ref, 'refs/tags/')
       with:
-        prerelease: ${{ contains(github.ref, '-') }}
+        files: sock.7z
         draft: false
-        files: |
-          sock.7z
         body: |
           ## 更新日志
           * 这是 GitHub Actions 自动化部署，更新日志应该很快会手动更新
