--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,9 +3,12 @@ name: Go
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    #branches: [ master ]
+    workflow_call:
+    workflow_dispatch:
+
+  #pull_request:
+    #branches: [ master ]
 
 jobs:
 
