--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,7 +3,7 @@ name: Go
 
 on:
   push:
-    #branches: [ master ]
+    branches: [ main ]
     workflow_call:
     workflow_dispatch:
 
@@ -85,14 +85,68 @@ jobs:
 
       run: |
         7z a -mx9 sock.7z ./package/
+    - name: Check out
+      uses: actions/checkout@v3
+    - name: Install mingw32 cross toolchains
+      run: |
+        MINGW_LLVM_URL="https://github.com/mstorsjo/llvm-mingw/releases/download/20231128/llvm-mingw-20231128-msvcrt-ubuntu-20.04-x86_64.tar.xz"
+        mkdir -p $HOME/mingw-llvm
+        wget $MINGW_LLVM_URL -O $HOME/mingw-llvm/llvm.tar.xz
+        cd $HOME/mingw-llvm
+        tar -xvf llvm.tar.xz --strip-components 1
+    - name: Build kptools
+      run: |
+        export PATH="$HOME/mingw-llvm/bin:$PATH"
+        ABIS="x86_64 i686 aarch64 armv7"
+          echo "- Compiling lightsock-$i-win.exe"
+        for i in $ABIS; do
+          echo "==> Compiling Client.cpp for $i..."
+          ${i}-w64-mingw32-clang++ Client.cpp -o lightsock-$i-win.exe || exit 1
+        done
+
+    - name: Upload build artifact
+        env:
+          SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
+        if: ${{ env.SIGNING_KEY != '' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: APatch
+          path: |
+             ./package/main-darwin-amd64
+             ./package/main-darwin-arm64
+             ./package/main-dragonfly-amd64
+             ./package/main-freebsd-arm
+             ./package/main-freebsd-amd64
+             ./package/main-freebsd-386
+             ./package/main-linux-386
+             ./package/main-linux-amd64
+             ./package/main-linux-arm
+             ./package/main-linux-arm64
+             ./package/main-linux-ppc64
+             ./package/main-linux-ppc64le
+             ./package/main-linux-mips
+             ./package/main-linux-mipsle
+             ./package/main-linux-mips64
+             ./package/main-linux-mips64le
+             ./package/main-openbsd-arm
+             ./package/main-openbsd-amd64
+             ./package/main-openbsd-386
+             ./package/main-plan9-amd64
+             ./package/main-plan9-386
+             ./package/main-solaris-amd64
+             ./package/main-windows-amd64.exe
+             ./package/main-windows-386.exe
+             ./package/main-windows-arm.exe
+             ./lightsock-*-win.exe
+
     - name: Release
       uses: softprops/action-gh-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    
+      if: ${{ env.SIGNING_KEY != '' && github.ref_type == 'tag' }}
       with:
-        tag_name: ${{ github.ref }}
-        release_name: ${{ github.ref }}
+        tag_name: ${{ github.tag }}
+        release_name: ${{ github.tag }}
         files: |
            sock.7z
            ./package/main-darwin-amd64
@@ -120,6 +174,7 @@ jobs:
            ./package/main-windows-amd64.exe
            ./package/main-windows-386.exe
            ./package/main-windows-arm.exe
+           ./lightsock-*-win.exe
            
            
            
